<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="${relativePackage}.${activityClass}" >

    <ScrollView
        android:id="@+id/main_activity_scrollview"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/main_activity_welcome_textview" >

        <LinearLayout
            android:id="@+id/main_activity_container"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="vertical"
            android:padding="40dp" >

            <Button
                android:id="@+id/main_activity_button_start"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:text="@string/start_btn_text" />

            <Button
                android:id="@+id/main_activity_button_create"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:text="@string/btn_create_text" />

            <Button
                android:id="@+id/main_activity_button_delete"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:text="@string/delete_all_btn_text" />

            <Button
                android:id="@+id/main_activity_button_exit"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/exti_btn_text" />
        </LinearLayout>
    </ScrollView>

    <TextView
        android:id="@+id/main_activity_welcome_textview"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:gravity="center"
        android:text="@string/MainActivity_title"
        android:textSize="24sp"
        android:textStyle="bold" />

</RelativeLayout>