<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="${relativePackage}.${activityClass}" >

    <RelativeLayout
        android:id="@+id/results_activity_progress_container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/results_activity_title_textview"
        android:padding="10dp" >

        <TextView
            android:id="@+id/results_activity_textview_correct_ans"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentTop="true"
            android:layout_marginLeft="10dp"
            android:text="@string/correct_title"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/results_activity_textview_rate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_below="@+id/results_activity_textview_correct_ans"
            android:layout_margin="10dp"
            android:text="TextView"
            android:textColor="@android:color/holo_green_dark"
            android:textSize="18sp" />

        <ProgressBar
            android:id="@+id/results_activity_progressbar"
            style="?android:attr/progressBarStyleHorizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/results_activity_textview_correct_ans"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="10dp"
            android:layout_marginTop="15dp"
            android:layout_toRightOf="@+id/results_activity_textview_rate" />
    </RelativeLayout>

    <TextView
        android:id="@+id/results_activity_title_textview"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:gravity="center"
        android:padding="20dp"
        android:text="@string/Results_title"
        android:textSize="24sp"
        android:textStyle="bold" />

    <RelativeLayout
        android:id="@+id/results_activity_bottom_container"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:padding="10dp" >

        <Button
            android:id="@+id/results_activity_button_quit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_marginBottom="10dp"
            android:background="@drawable/gray_textview_background"
            android:minHeight="24dp"
            android:text="@string/Results_Quit_text" />

        <Button
            android:id="@+id/results_activity_button_tryagain"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_marginBottom="10dp"
            android:background="@drawable/blue_textview_background"
            android:minHeight="24dp"
            android:text="@string/Results_Try_text" />
    </RelativeLayout>

    <TextView
        android:id="@+id/results_activity_textview_encourage"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@+id/results_activity_bottom_container"
        android:layout_below="@+id/results_activity_progress_container"
        android:gravity="center"
        android:padding="10dp"
        android:text="@string/encourage_text"
        android:textSize="20sp" />

</RelativeLayout>