<RelativeLayout xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="${relativePackage}.${activityClass}"
    android:padding="10dp" >

    <RelativeLayout
        android:id="@+id/trivia_activity_top_container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:gravity="center"
        android:padding="14dp" >

        <TextView
            android:id="@+id/trivia_activity_ques_num_textbox"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:background="@drawable/blue_textview_background"
            android:text="@string/trivia_activity_ques_num"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/trivia_activity_timer_textbox"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:background="@drawable/blue_textview_background"
            android:text="@string/trivia_activity_countdown"
            android:textStyle="bold" />
    </RelativeLayout>

    <LinearLayout
        android:id="@+id/trivia_activity_middle_container"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@+id/trivia_activity_bottom_container"
        android:layout_below="@+id/trivia_activity_top_container"
        android:orientation="vertical" >

        <RelativeLayout
            android:id="@+id/trivia_activity_imageview_container"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center" >

        </RelativeLayout>

        <ScrollView
            android:id="@+id/trivia_activity_qeustion_scrollview"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1" >

            <RelativeLayout
                android:id="@+id/trivia_activity_question_container"
                android:layout_width="match_parent"
                android:layout_height="match_parent" >

                <TextView
                    android:id="@+id/trivia_activity_question_textview"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_alignParentTop="true"
                    android:text="@string/trivia_activity_question_textview"
                    android:textStyle="bold" />

                <RadioGroup
                    android:id="@+id/trivia_activity_radio_group"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/trivia_activity_question_textview"
                    android:paddingLeft="10dp" >

                </RadioGroup>
            </RelativeLayout>
        </ScrollView>
    </LinearLayout>

    <RelativeLayout
        android:id="@+id/trivia_activity_bottom_container"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:gravity="center"
        android:padding="14dp" >

        <Button
            android:id="@+id/trivia_activity_button_quit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:background="@drawable/gray_textview_background"
            android:minHeight="24dip"
            android:text="@string/trivia_activity_button_quit"
            android:textStyle="bold" />

        <Button
            android:id="@+id/trivia_activity_button_next"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:background="@drawable/gray_textview_background"
            android:minHeight="24dip"
            android:text="@string/trivia_activity_button_next"
            android:textStyle="bold" />

    </RelativeLayout>

</RelativeLayout>